Fix: simple fix imageWrapper overflow 속성 추가

--- a/src/pages/ShopList/ShopList.scss
+++ b/src/pages/ShopList/ShopList.scss
@@ -85,6 +85,7 @@
         .imageWrapper {
           width: 330px;
           height: 230px;
+          overflow: hidden;
 
           img {
             display: block;
